Fix whitespace between radio sections

--- a/src/scss/styles-1-large-main.scss
+++ b/src/scss/styles-1-large-main.scss
@@ -519,19 +519,23 @@ select#platform-selector::-ms-expand {
 // RADIO BUTTON STYLING
 .btn-container {
   margin: 2rem auto;
+  width: 100%;
 }
 .btn-form {
   display: inline-block;
-  width: 25%;
+  width: 20%;
   margin: 0 auto;
   vertical-align: top;
 }
 .btn-label, .btn-form > h3 {
   display: block;
-  width: 30%;
+  width: 70%;
   text-align: left;
   margin: 0.5rem auto;
   white-space: nowrap;
+}
+.btn-form > h3 {
+  font-weight: 500;
 }
 .btn-label {
   padding-left: 1.5rem;
@@ -539,6 +543,12 @@ select#platform-selector::-ms-expand {
 .radio-button {
   margin-right: 0.5rem;
   min-width: 0.5rem;
+}
+.btn-container > form:first-child {
+  margin-left: 10%;
+}
+.btn-container > form:last-child {
+  padding-right: 3%;
 }
 // END OF RADIO BUTTON STYLING
 
